feat: major improvements to security, features, and code quality (v2.0.0)
## New Features
- Add input validation system with HTML sanitization
- Add rate limiting to prevent spam (3 req/5min)
- Add /stats command for payment statistics
- Add /help command for admin guidance
- Add custom payment amount support
- Add graceful shutdown with proper cleanup

## Security Enhancements
- Input validation for balance and username
- HTML sanitization to prevent XSS attacks
- Rate limiting to prevent abuse
- Enhanced error handling without data leaks

## Database Improvements
- Implement connection pooling with context managers
- Add database indexes for better performance
- Add get_statistics() method for analytics
- Comprehensive error handling in all operations

## Code Quality
- Add comprehensive unit tests (pytest)
- Add utils.py module for validators and rate limiter
- Enhanced logging to file and console
- Better error messages for users
- Improved code organization and documentation

## Documentation
- Enhanced README with new features
- Add CHANGELOG.md for version tracking
- Add CONTRIBUTING.md for contributors
- Add QUICKSTART.md for quick setup
- Add IMPROVEMENTS.md with detailed summary
- Improve .env.example with instructions

## Testing
- Add comprehensive test suite
- Add requirements-dev.txt
- Unit tests for validators, database, models

## Files Added
- utils.py - Validation utilities
- tests/test_bot.py - Test suite
- CHANGELOG.md, CONTRIBUTING.md, IMPROVEMENTS.md, QUICKSTART.md
- requirements-dev.txt

## Files Modified
- main.py - Graceful shutdown
- database.py - Connection pooling, statistics
- handlers/employee.py - Validation, rate limiting
- handlers/admin.py - Stats, help, custom payments
- keyboards.py - Custom amount button
- README.md - Complete documentation update

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,37 @@
+# ==============================================
+# TELEGRAM BOT CONFIGURATION
+# ==============================================
+
 # Токен вашего Telegram бота (получите у @BotFather)
+# 1. Напишите @BotFather в Telegram
+# 2. Отправьте команду /newbot
+# 3. Следуйте инструкциям и скопируйте токен
 BOT_TOKEN=your_bot_token_here
 
 # ID администратора (узнайте у @userinfobot)
 # Можно указать несколько через запятую: 123456789,987654321
+# 1. Напишите @userinfobot в Telegram
+# 2. Отправьте /start
+# 3. Скопируйте ваш ID
 ADMIN_ID=your_admin_id_here
 
 # ID группового чата для уведомлений (добавьте бота в группу и узнайте ID)
+# 1. Создайте группу в Telegram
+# 2. Добавьте бота в группу как администратора
+# 3. Используйте @getidsbot или другой способ узнать ID группы
+# 4. ID группы обычно отрицательное число (например: -1001234567890)
 GROUP_CHAT_ID=your_group_chat_id_here
 
 # ID сотрудников (через запятую)
+# Список ID пользователей, которым разрешено создавать заявки
 # Пример: 111111111,222222222,333333333
 EMPLOYEE_IDS=employee_id_1,employee_id_2,employee_id_3
+
+# ==============================================
+# ПРИМЕЧАНИЯ
+# ==============================================
+# - Не используйте пробелы вокруг знака =
+# - Не добавляйте кавычки вокруг значений
+# - Файл .env не должен быть добавлен в git
+# - Скопируйте этот файл как .env и заполните своими данными
+
